automatically backed up by learn

--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,8 @@
 </head>
 <body>
 
+  <!-- I used my own repo to finish this lesson. No need to duplicate code. -->
+
   <h1>Exceptional</h1>
   <h2>Realty Group</h2>
 
